--- a/views/homepage/index.ejs
+++ b/views/homepage/index.ejs
@@ -1,21 +1,3 @@
-<div class="banner-top" >
-	
-	<div class="banner-top-text">
-		<h1>Biking any where</h1>
-		<h2>are you ready to ride ?</h2>
-	</div>
-</div>
+<% include ../homepage/topbanner %>
 
-<div class="carousel" ng-controller="CarouselDemoCtrl" >
-	<div style="height: 305px">
-		<carousel interval="myInterval" no-wrap="noWrapSlides">
-			<slide ng-repeat="slide in slides" active="slide.active">
-				<img ng-src="{{slide.image}}" style="margin:auto;">
-				<div class="carousel-caption">
-					<h4>Slide {{$index}}</h4>
-					<p>{{slide.text}}</p>
-				</div>
-			</slide>
-		</carousel>
-	</div>
-</div>
+<% include ../homepage/carousel %>
