--- a/views/components/thirdpartyvendors.ejs
+++ b/views/components/thirdpartyvendors.ejs
@@ -1,11 +1,16 @@
 <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 <script type="text/javascript" src="js/angular-animate.js"></script>
+<script type="text/javascript" src="js/angular-route.min.js"></script>
 <script type="text/javascript" src="js/ui-bootstrap-tpls.js"></script>
 <script src="http://maps.googleapis.com/maps/api/js?sensor=false&amp;libraries=places"></script>
 <script type="text/javascript" src="js/jquery.geocomplete.js"></script>
+
 <script type="text/javascript" src="js/app.js"></script>
+<script type="text/javascript" src="js/config.js"></script>
 
 <!-- TODO: separate the controllers in a different file ejs, something like maincontrollers.ejs  -->
 
 <script type="text/javascript" src="js/controller/horizontalcarousel.js" ></script>
-<script type="text/javascript" src="js/controller/search.js" ></script>
+<script type="text/javascript" src="js/controller/homepage.js" ></script>
+
+<script type="text/javascript" src="js/ngAutocomplete.js"></script>
